[tool.poetry]
name = "live-recorder"
version = "0.1.0"
description = ""
authors = ["TerraceCN <zky3213@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
